--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -74,6 +74,7 @@ body {
   overflow-x: hidden;
   margin: 0;
   padding: 0;
+  scroll-behavior: smooth;
 }
 
 body {
@@ -100,7 +101,6 @@ h1, h2 {
 }
 
 a {
-  color: inherit;
   text-decoration: none;
 }
 
